@@ -3,8 +3,9 @@
 import re
 import unittest
 import natto.mecab as mecab
+from tests import Test23Support
 
-class TestDictionary(unittest.TestCase):
+class TestDictionary(unittest.TestCase, Test23Support):
     '''Tests the behavior of the natto.dictionary.DictionaryInfo class.
 
     Assumes that the mecab-ipadic 2.7.0-20070801 dictionary is installed.
@@ -15,14 +16,13 @@ class TestDictionary(unittest.TestCase):
     - SHIFT-JIS
     - EUC-JP
     '''
+    CHARSETS = ['utf-16', 'utf-8', 'utf8', 'shift-jis', 'euc-jp']
 
     def test_sysdic(self):
         with mecab.MeCab() as nm:
             sysdic = nm.dicts[0]
-
             cs = sysdic.charset.lower()
-            self.assertIn(cs,
-                          ['utf-16', 'utf-8', 'utf8', 'shift-jis', 'euc-jp'])
+            self.assertIn(cs, self.CHARSETS)
             self.assertIsNotNone(re.search('sys.dic$', sysdic.filename))
             self.assertEqual(sysdic.type, 0)
             self.assertEqual(sysdic.version, 102)
